Sent folks to errata.txt instead.

--- a/errata.html
+++ b/errata.html
@@ -13,6 +13,8 @@
 
 <h1>Errata: 1st Printing EOPL3</h1>
 
+<p>Note: this file may not be up to date.  Look at errata.txt instead.</p>
+
 <div id="container" align="left">
 
 <ul>
